--- a/index.html
+++ b/index.html
@@ -7,27 +7,44 @@
     <title>Food-Network</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
-    <div id="font">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <section id="font">
+    <section class="font">
         <div class="half_part" style="padding-top: 3%;">
             <h1> <span style="color:orange ;">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
-            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-            <a id="order" target="_blank" href="https://www.dominos.com/index.intl.html">Order Food</a>
+            <p id="imagine">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a id="order" target="_blank" href="https://www.linkedin.com/in/abdullah-al-ryan-4021841aa/">Order Food</a>
         </div>
         <div class="half_part">
             <img src="bg1.png" alt="A Lady standing with a delicious food!">
         </div>
-        
-
-
     </section>
+
+    <section class="font bottom">
+        <div  id="flexible">
+            <img src="bg2.png" alt="Standing beautiful girl">
+        </div>
+        <div class="half_part"  style="padding-top: 9%;">
+            <h1>About Me</h1>
+            <p id="imagine">Food Network is a food delivery service operating in Dhaka, Bangladesh established in 2021. We have achieved #BestBrand awards of Bangaldesh. We ensure best quality food with a healty diet.</p>
+            <a id="order" target="_blank" href="https://www.linkedin.com/in/abdullah-al-ryan-4021841aa/">Contact Me</a>
+        </div>
+    </section>
+
+    <section>
+        <h1 class="services" style="padding-top: 2%;">My Services</h1>
+        <p class="services" id="cuisine">Food Network serves varieties types of food at your door for example: Indian cuisine, Italian Cuisine, Mexican dishes, Dhakaiyya Biriyani & Kala Bhuna</p>
+    </section>
+
+    <footer>
+        <h2> <span style="color: orange;">FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healthy.Live healthy to live happy.</p>
+    </footer>
 </body>
 </html>
