--- a/index.html
+++ b/index.html
@@ -32,15 +32,37 @@
         </div>
         <div class="half_part"  style="padding-top: 9%;">
             <h1>About Me</h1>
-            <p id="imagine">Food Network is a food delivery service operating in Dhaka, Bangladesh established in 2021. We have achieved #BestBrand awards of Bangaldesh. We ensure best quality food with a healty diet.</p>
+            <p id="imagine">Food Network is a food delivery service operating in Dhaka, Bangladesh established in 2021. We have achieved #BestBrand awards of Bangladesh. We ensure best quality food with a healty diet.</p>
             <a id="order" target="_blank" href="https://www.linkedin.com/in/abdullah-al-ryan-4021841aa/">Contact Me</a>
         </div>
     </section>
 
-    <section>
-        <h1 class="services" style="padding-top: 2%;">My Services</h1>
-        <p class="services" id="cuisine">Food Network serves varieties types of food at your door for example: Indian cuisine, Italian Cuisine, Mexican dishes, Dhakaiyya Biriyani & Kala Bhuna</p>
-    </section>
+    
+        <div>
+            <h1 class="services" style="padding-top: 2%;">My Services</h1>
+            <p class="services" id="cuisine">Food Network serves varieties types of food at your door for example: Indian cuisine, Italian Cuisine, Mexican dishes, Dhakaiyya Biriyani & Kala Bhuna</p>
+        </div>
+        <div class="font">
+            <div id="food1" class="onethird">
+                <img src="foods/food1.jpg" alt="Pan Cake loading">
+                <h2>Pan Cakes</h2>
+                <p> A pan cake is made with b</p>
+            </div>
+
+            <div id="food2" class="onethird">
+                <img src="foods/food2.jpg" alt="">
+                <h2>T-Bone Steak</h2>
+                <p>T- bone steak..</p>
+            </div>
+
+            <div id="food3" class="onethird">
+                <img src="foods/food3.png" alt="">
+                <h2>Chicken Thai Soup</h2>
+                <p>gfdhgtrhrthrthrthrthrthrthjrtpppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppppp</p>
+            </div>
+        </div>
+
+
 
     <footer>
         <h2> <span style="color: orange;">FOOD</span> NETWORK</h2>
