--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section>
         <div class="services">
-            <h1 style="font-size: 30px;">Most Popular</h1>
+            <h1 id="popular">Most Popular Items</h1>
         </div>
         <div class="container">
             <div class="pizzaperi">
@@ -87,6 +87,20 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="app">
+        <div class="container">
+            <div id="left">
+                <img src="foods/app.png" alt="">
+            </div>
+            <div id="right">
+                <h2>Download App</h2>
+                <p>For lightning fast ordering experience <br>download the Food Network's app</p>
+                <a  target="_blank" href="https://play.google.com/" ><img src="foods/google.png" alt=""></a>
+            </div>
+        </div>
+
     </section>
 
 
