--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1> <span style="color:orange ;">Skip</span> The Diet,<br>
                 Just Eat Healthy,<br>
                 With Food Network</h1>
-            <p id="imagine">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <p class="imagine">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
             <a id="order" target="_blank" href="https://www.linkedin.com/in/abdullah-al-ryan-4021841aa/">Order Food</a>
         </div>
         <div class="half_part">
@@ -31,13 +31,13 @@
         </div>
         <div class="half_part" style="padding-top: 5%;">
             <h1>About Me</h1>
-            <p id="imagine">Food Network is a food delivery service operating in Dhaka, Bangladesh established in 2021.
+            <p class="imagine">Food Network is a food delivery service operating in Dhaka, Bangladesh established in 2021.
                 We have achieved #BestBrand awards of Bangladesh. We ensure best quality food with a healty diet.</p>
             <a id="order" target="_blank" href="https://www.linkedin.com/in/abdullah-al-ryan-4021841aa/">Contact Me</a>
         </div>
     </section>
     <div>
-        <h1 class="services" style="padding-top: 2%;">My Services</h1>
+        <h1 class="services" style="padding-top: 2%;">My Recipies</h1>
         <p class="services" id="cuisine">Food Network serves varieties types of food at your door for example: Indian
             cuisine, Italian Cuisine, Mexican dishes, Dhakaiyya Biriyani & Kala Bhuna</p>
     </div>
